@@ -41,6 +41,7 @@ const I16u NullValue::USHORT = std::numeric_limits<I16u>::max();
 const I32u NullValue::UINTEGER = std::numeric_limits<I32u>::max();
 const I64u NullValue::UBIGINTEGER = std::numeric_limits<I64u>::max();
 const Decimal NullValue::DECIMAL = std::numeric_limits<Decimal>::max();
+const Char NullValue::CHAR = (char) 0;
 const Date NullValue::DATE = Date(DateTime(9999, 12, 31));
 const String NullValue::STRING = "NULL";
 
